--- a/package.json
+++ b/package.json
@@ -6,13 +6,20 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "@types/draft-js": "^0.10.44",
     "@types/jest": "^24.9.1",
     "@types/node": "^12.12.62",
     "@types/react": "^16.9.50",
     "@types/react-dom": "^16.9.8",
+    "@types/react-draft-wysiwyg": "^1.13.0",
+    "bootstrap": "^4.5.2",
+    "draft-js": "^0.11.7",
     "react": "^16.13.1",
+    "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
+    "react-draft-wysiwyg": "^1.14.5",
     "react-scripts": "3.4.3",
+    "react-wysiwyg-typescript": "^1.0.2",
     "typescript": "^3.7.5"
   },
   "scripts": {
