--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react-draft-wysiwyg": "^1.13.0",
     "bootstrap": "^4.5.2",
     "draft-js": "^0.11.7",
+    "formik": "^2.2.0",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
