--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bootstrap": "^4.5.2",
     "draft-js": "^0.11.7",
     "formik": "^2.2.0",
+    "jwt-decode": "^3.0.0",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
@@ -27,7 +28,7 @@
     "typescript": "^3.8.3"
   },
   "scripts": {
-    "start": "PORT=2000 react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -48,6 +49,7 @@
     ]
   },
   "devDependencies": {
+    "@types/jwt-decode": "^2.2.1",
     "@types/react-router-dom": "^5.1.6",
     "reload": "^3.1.1"
   }
