--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react": "^16.9.50",
     "@types/react-dom": "^16.9.8",
     "@types/react-draft-wysiwyg": "^1.13.0",
+    "@types/react-select": "^3.0.22",
     "bootstrap": "^4.5.2",
     "draft-js": "^0.11.7",
     "formik": "^2.2.0",
@@ -24,6 +25,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "react-searchable-dropdown": "^1.2.5",
+    "react-select": "^2.0.0-beta.7",
     "react-textarea-autosize": "^8.2.0",
     "react-wysiwyg-typescript": "^1.0.2",
     "typescript": "^3.8.3"
