--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@nestjs/mongoose": "^7.0.2",
     "@nestjs/passport": "^7.1.0",
     "@nestjs/platform-express": "^7.0.0",
+    "@nestjs/serve-static": "^2.1.3",
     "@nestjs/typeorm": "^7.1.4",
     "@types/mongoose": "^5.7.36",
     "class-transformer": "^0.3.1",
