--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/icons": "^4.2.2",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
@@ -13,6 +14,7 @@
     "@types/react-dom": "^16.9.8",
     "@types/react-draft-wysiwyg": "^1.13.0",
     "@types/react-select": "^3.0.22",
+    "antd": "^4.7.3",
     "axios": "^0.21.0",
     "bootstrap": "^4.5.2",
     "draft-js": "^0.11.7",
