--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@nestjs/serve-static": "^2.1.3",
     "@nestjs/typeorm": "^7.1.4",
     "@types/mongoose": "^5.7.36",
+    "axios": "^0.21.0",
     "class-transformer": "^0.3.1",
     "class-validator": "^0.12.2",
     "mongodb": "^3.6.2",
