--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-select": "^2.0.0-beta.7",
     "react-textarea-autosize": "^8.2.0",
     "react-wysiwyg-typescript": "^1.0.2",
+    "reqwest": "^2.0.5",
     "typescript": "^3.8.3"
   },
   "scripts": {
