--- a/package.json
+++ b/package.json
@@ -12,14 +12,19 @@
     "@types/react": "^16.9.50",
     "@types/react-dom": "^16.9.8",
     "@types/react-draft-wysiwyg": "^1.13.0",
+    "antd": "^4.7.3",
     "bootstrap": "^4.5.2",
     "draft-js": "^0.11.7",
+    "formik": "^2.2.1",
+    "jwt-decode": "^3.0.0",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
     "react-draft-wysiwyg": "^1.14.5",
+    "react-image": "^4.0.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
+    "react-select": "^3.1.0",
     "react-wysiwyg-typescript": "^1.0.2",
     "typescript": "^3.7.5"
   },
@@ -45,6 +50,8 @@
     ]
   },
   "devDependencies": {
-    "@types/react-router-dom": "^5.1.6"
+    "@types/jwt-decode": "^2.2.1",
+    "@types/react-router-dom": "^5.1.6",
+    "@types/react-select": "^3.0.22"
   }
 }
