--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react-dom": "^16.9.8",
     "@types/react-draft-wysiwyg": "^1.13.0",
     "antd": "^4.7.3",
+    "axios": "^0.21.0",
     "bootstrap": "^4.5.2",
     "draft-js": "^0.11.7",
     "formik": "^2.2.1",
